Trying to fix Spotbugs warnings